# ChangeLog for app-crypt/jacksum
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-crypt/jacksum/ChangeLog,v 1.7 2004/12/12 17:54:16 weeve Exp $

  12 Dec 2004; Jason Wever <weeve@gentoo.org> jacksum-1.4.0.ebuild:
  Stable on sparc.

*jacksum-1.5.0 (25 Oct 2004)

  25 Oct 2004; Thomas Matthijs <axxo@gentoo.org> +jacksum-1.5.0.ebuild:
  version bump #68837

  05 Oct 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  jacksum-1.4.0.ebuild:
  Masked jacksum-1.4.0.ebuild stable for ppc

  23 Aug 2004; Chris Aniszczyk <zx@gentoo.org> jacksum-1.4.0.ebuild:
  Marking stable on x86

*jacksum-1.4.0 (04 Apr 2004)

  04 Apr 2004; Chris Aniszczyk <zx@gentoo.org> jacksum-1.4.0.ebuild,
  metadata.xml:
  Initial Import. Closes #46458.
  Thanks to Alexandru Toma <flash3001@yahoo.com> for the initial ebuild.
