@@ -1,6 +1,8 @@
-MD5 a4855b21906375c253759f9ab669d621 ChangeLog 864
+MD5 d191d2bfb27fccfc5fef40485a7f60b0 ChangeLog 1057
 MD5 87ce303eefdf19a25de4360bd96f5e40 jacksum-1.4.0.ebuild 1079
-MD5 a6ec7d7724fbd068ffb39b5be56134ed metadata.xml 157
 MD5 ac83d0f091d165baeffa1e0155419398 jacksum-1.5.0.ebuild 1094
+MD5 a6ec7d7724fbd068ffb39b5be56134ed metadata.xml 157
+MD5 6d904e21ec8316a3b35465f946e49103 jacksum-1.5.1.ebuild 1105
 MD5 d70a42e3ead229a1001fbe2b09ee2937 files/digest-jacksum-1.4.0 62
 MD5 a309849eb2163c087c093b09be3c0787 files/digest-jacksum-1.5.0 62
+MD5 0576f4f7649b4c5a354c44d3effd44a6 files/digest-jacksum-1.5.1 62
